--- a/whitepaper/main.tex
+++ b/whitepaper/main.tex
@@ -24,7 +24,7 @@
 \newtheorem{lemma}[theorem]{Lemma}
 
 \title{Advanced Network Analysis of Food System Waste: A Multi-Agent Approach with Causal Inference}
-\author{Michael Lee}
+\author{Michael Harrison Lee}
 \date{\today}
 
 \begin{document}
